--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
 html,
 body {
   max-width: 100vw;
+  padding: 10px;
   overflow-x: hidden;
 }
 
@@ -30,6 +31,10 @@ body {
   margin: 0;
 }
 
+main {
+  padding-top: 12px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -39,4 +44,12 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+section {
+  text-align: center;
+}
+
+h2 {
+  color: var(--tea-green);
 }
