--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@
 html,
 body {
   max-width: 100vw;
+  min-height: 100vh;
   padding: 10px;
   overflow-x: hidden;
 }
@@ -38,6 +39,7 @@ body {
 
 main {
   padding-top: 12px;
+  padding-bottom: 24px;
 }
 
 a {
