--- a/app/(styles)/layout.module.css
+++ b/app/(styles)/layout.module.css
@@ -1,10 +1,3 @@
-:root {
-    --tea-green: #CAFFB9;
-    --periwinkle: #C2D4FF;
-    --cambridge-blue: #8FA78B;
-    --charcoal: #324A5F;
-    --rich-black: #0C1821; 
-}
 
 .mainBody {
     position: relative;
@@ -35,7 +28,7 @@
     padding: 10px;
 }
 
-.socialMediaButtonContainer a:hover, .navlinkStyles li:hover {
+.socialMediaButtonContainer a:hover, .navlinkStyles a:hover {
     color: var(--tea-green);
     transform: scale(1.25);
 }
