changed menu to hamburger icon for mobile view on navbar

--- a/app/(styles)/layout.module.css
+++ b/app/(styles)/layout.module.css
@@ -87,7 +87,7 @@
     .navlinkStyles{
         display: inline-flex;
         position: absolute;
-        right: 1%;
+        left: 80%;
         top: -50%;
     }
 
